Bug 1407243 - Don't immediately fire canplaythrough for infinite/live streams. r=jwwang

MozReview-Commit-ID: 2LQFa8PHvO5

--HG--
extra : rebase_source : 3534a963202658870221fca9cc238185d7e55156